glx/testdata/invalid/custom-vocab-edge-cases/vocabularies/relationship-properties.glx
relationship_properties:
  custom_rel_prop:
    label: "Custom Relationship Property"
    value_type: string


